SUBDIRS=     \
 application \
 controls    \
 events      \
 generators  \
 models      \
 utils

emaneincdir = $(includedir)/emane/

emaneinc_HEADERS =                       \
 antenna.h                               \
 antenna.inl                             \
 antennamode.h                           \
 anyexception.h                          \
 any.h                                   \
 buildable.h                             \
 buildable.inl                           \
 buildexception.h                        \
 cloneable.h                             \
 commonmacheaderexception.h              \
 commonmacheader.h                       \
 commonphyheader.h                       \
 component.h                             \
 componenttypes.h                        \
 configurationexception.h                \
 configurationinfo.h                     \
 configurationinfo.inl                   \
 configurationproperties.h               \
 configurationregistrar.h                \
 configurationregistrar.inl              \
 configurationupdate.h                   \
 configureexception.h                    \
 constants.h                             \
 controlmessage.h                        \
 downstreamcontroltransport.h            \
 downstreampacket.h                      \
 downstreamtransport.h                   \
 downstreamtransport.inl                 \
 eventagent.h                            \
 eventgenerator.h                        \
 event.h                                 \
 eventregistrar.h                        \
 eventserviceprovider.h                  \
 eventserviceuser.h                      \
 exception.h                             \
 filedescriptorserviceprovider.h         \
 filedescriptorserviceprovider.inl       \
 filtermatchcriterion.h                  \
 filtermatchcriterion.inl                \
 flowcontrolclient.h                     \
 flowcontrolmanager.h                    \
 frequencysegment.h                      \
 frequencysegment.inl                    \
 inetaddr.h                              \
 inetaddrexception.h                     \
 logserviceprovider.h                    \
 logserviceprovider.inl                  \
 maclayerimpl.h                          \
 maclayerimpl.inl                        \
 mactypes.h                              \
 neighbormetricmanager.h                 \
 nemlayer.h                              \
 net.h                                   \
 orientation.h                           \
 orientation.inl                         \
 orientationformatter.h                  \
 packetinfo.h                            \
 packetinfo.inl                          \
 phylayerimpl.h                          \
 phylayerimpl.inl                        \
 phytypes.h                              \
 platformexception.h                     \
 platformserviceprovider.h               \
 platformserviceuser.h                   \
 position.h                              \
 position.inl                            \
 positionformatter.h                     \
 queuemetricmanager.h                    \
 radioserviceprovider.h                  \
 radioserviceuser.h                      \
 registrarexception.h                    \
 registrar.h                             \
 runningstatemutable.h                   \
 serializable.h                          \
 serializationexception.h                \
 shimlayerimpl.h                         \
 receivemetrictable.h                    \
 spectralmaskexception.h                 \
 spectrumserviceexception.h              \
 spectrumserviceprovider.h               \
 startexception.h                        \
 statistic.h                             \
 statisticinfo.h                         \
 statisticinfo.inl                       \
 statisticmanifest.h                     \
 statisticnonnumeric.h                   \
 statisticnonnumeric.inl                 \
 statisticnumeric.h                      \
 statisticnumeric.inl                    \
 statisticproperties.h                   \
 statisticregistrar.h                    \
 statisticregistrar.inl                  \
 statistictableexception.h               \
 statistictable.h                        \
 statistictableinfo.h                    \
 statistictableinfo.inl                  \
 statistictable.inl                      \
 statistictablepublisher.h               \
 timerserviceprovider.h                  \
 timerserviceprovider.inl                \
 timerserviceuser.h                      \
 transmitter.h                           \
 transmitter.inl                         \
 transport.h                             \
 types.h                                 \
 upstreamcontroltransport.h              \
 upstreampacket.h                        \
 upstreamtransport.h                     \
 upstreamtransport.inl                   \
 velocity.h                              \
 velocity.inl                            \
 velocityformatter.h

nodist_emaneinc_HEADERS=                 \
 version.h

EXTRA_DIST=                              \
 version.h.in

install-exec-hook:
	$(mkinstalldirs) $(DESTDIR)$(emaneincdir)
